# uiucprescon.getmarc2

./: .coveragerc  .pylintrc  CODE_OF_CONDUCT.md  Jenkinsfile  MANIFEST.in  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: tox_matrix.yml
ci/docker/chocolatey_package/: Dockerfile
ci/docker/chocolatey_package/choco_package_template/pythonscript/: pythonscript.nuspec
ci/docker/chocolatey_package/choco_package_template/pythonscript/tools/: chocolateyInstall.ps1
ci/docker/python/linux/: Dockerfile
ci/docker/python/linux/jenkins/: Dockerfile
ci/docker/python/linux/tox/: Dockerfile
ci/docker/python/shared/: requirements-ci.txt
ci/docker/python/windows/: Dockerfile
ci/docker/python/windows/jenkins/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
ci/jenkins/scripts/: devpi.groovy  tox.groovy
ci/scripts/: create_uv_config.sh  new-uv-global-config.ps1
docs/: api.rst  conf.py  index.rst  spelling_wordlist.txt  usage.rst
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-dev-freeze.txt  requirements-dev.txt
src/uiucprescon/getmarc2/: 955_template.xml  __init__.py  modifiers.py  query.py
tests/: conftest.py  test_cli.py  test_modifers.py  test_query_strategies.py  test_record.py
uiucprescon/getalmarc2/: __main__.py  cli.py  records.py
uiucprescon/getmarc2/: __init__.py  __main__.py  cli.py  modifiers.py  query.py  records.py
vars/: runJenkinsPipeline.groovy
