[build-system]
requires = ["setuptools>=77.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uiucprescon.getmarc2"
version = "0.1.4.dev0"
requires-python = ">= 3.10"
dependencies = [
    "lxml",
    "requests",
]
readme = "README.md"
license = "NCSA"
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Uses the Get Bib Record Web Service to get marc data from the Alma catalog"

[tool.setuptools]
packages = [
    "uiucprescon.getmarc2",
]
zip-safe = true

[tool.setuptools.package-data]
"uiucprescon.getmarc2" = [
    "MARC21slim.xsd",
    "955_template.xml",
    "py.typed"
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
[project.scripts]
getmarc = "uiucprescon.getmarc2.__main__:main"


[tool.coverage.run]
branch = true
source = ["uiucprescon"]
relative_files = true

[tool.coverage.paths]
source = ["uiucprescon"]

[tool.coverage.report]
exclude_lines =[
    "if TYPE_CHECKING:"
]

[[tool.mypy.overrides]]
module = [
    "lxml",
    "importlib_metadata"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbose -s --doctest-modules"
testpaths = [
    "tests",
    "uiucprescon"
]
junit_family = "xunit2"