[build-system]
requires = ["setuptools>=77.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uiucprescon.getmarc2"
version = "0.1.6.dev0"
requires-python = ">= 3.10"
dependencies = [
    "lxml",
    "requests",
]
readme = "README.md"
license = "NCSA"
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Uses the Get Bib Record Web Service to get marc data from the Alma catalog"
[dependency-groups]
test = ["pytest", "coverage"]
docs = ["sphinx"]
audit-dependencies = ['uv-secure']
type_checking = [
    "types-requests",
    "lxml",
    "mypy",
]
lint = [
    "bandit",
    "flake8",
    "pydocstyle",
    "pylint",
    {include-group = "type_checking"},
]
tox = ['tox']
dev = [
    "commitizen",
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "tox"},
    {include-group = "test"},
    {include-group = "audit-dependencies"},
]
release = ['twine']
ci = [
    "pysonar",
    {include-group = "release"},
    {include-group = "dev"},
]
[tool.setuptools]
packages = [
    "uiucprescon.getmarc2",
]
package-dir = {"uiucprescon.getmarc2" = "src/uiucprescon/getmarc2"}
zip-safe = true

[tool.setuptools.package-data]
"uiucprescon.getmarc2" = [
    "MARC21slim.xsd",
    "955_template.xml",
    "py.typed"
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
[project.scripts]
getmarc = "uiucprescon.getmarc2.__main__:main"


[tool.coverage.run]
branch = true
source = ["uiucprescon"]
relative_files = true

[tool.coverage.paths]
source = ["uiucprescon"]

[tool.coverage.report]
exclude_lines =[
    "if TYPE_CHECKING:"
]

[tool.mypy]
mypy_path = "src"


[[tool.mypy.overrides]]
module = [
    "lxml",
    "importlib_metadata"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbose -s --doctest-modules"
testpaths = [
    "tests",
    "uiucprescon"
]
junit_family = "xunit2"