[metadata]
name = uiucprescon.getmarc2
version = 0.1.1
url = https://github.com/UIUCLibrary/
download_url = https://github.com/UIUCLibrary/
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Uses the Get Bib Record Web Service to get marc data from the Alma catalog
long_description = file: README.md
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[options]
zip_safe = True

[tool:pytest]
testpaths =
    tests
    uiucprescon
addopts = --verbose -s --doctest-modules
junit_family=xunit2

[aliases]
test=pytest

[build_sphinx]
source_dir = docs/source
build_dir  = build/docs
config_dir = docs/source
all_files  = 1
